# BORG

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MILESTONE.md  README.md  ROADMAP.md  SESSION_RECOVERY.md  config.example.yaml  config.yaml  entrypoint.sh  genkey.py  go.mod  index.html  kind-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.devcontainer/: Dockerfile  db.Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.github/workflows/: docker.yml  go.yml  helm-release.yml  helm.yml  python.yml
charts/borg/: .helmignore  Chart.yaml  values.schema.json  values.yaml
charts/borg/templates/: _helpers.yaml  certificate.yaml  clusterrole.yaml  clusterrolebinding.yaml  config.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
cmd/borg/: main.go  main_test.go  tls.go  tls_test.go
cmd/borg-genkey/: main.go  main_test.go
docs/migration/: go-k8s-smoke-test-harness.md  go-project-layout.md  kind-go-validation-harness.md  local-smoke-test-harness.md  python-http-contract.md  python-ops-contract.md  python-runtime-contract.md
dummy-openai/: Dockerfile  README.md  main.go  main.py  main_test.go
dummy-openai/charts/dummy-openai/: Chart.yaml  values.yaml
dummy-openai/charts/dummy-openai/templates/: _helpers.yaml  deployment.yaml
internal/app/: app.go  app_test.go
internal/auth/: auth.go  auth_test.go
internal/config/: config.go  config_test.go
internal/discovery/: discovery.go  discovery_test.go
internal/discovery/k8s/: k8s.go  k8s_test.go
internal/httpapi/: httpapi.go  httpapi_test.go
internal/openai/: models.go
internal/proxy/: proxy.go  proxy_test.go  roundrobin.go
k8s/: borg.yaml  service-account.yaml
scripts/: validate-helm-chart.sh  validate-kind-go.sh
src/borg/: __main__.py  k8s_discovery.py  main.py  proxy.py
tests/: conftest.py  test_discovery.py  test_genkey.py  test_proxy_router.py  test_proxy_service_instances.py  testcfg.yaml
tests/k8s_smoke/: k8s_smoke_test.go  test_go_k8s_discovery.py
tests/smoke/: test_local_parity.py
