[project]
name = "borg"
version = "0.1.0"
description = "OpenAI loadbalancing proxy."
readme = "README.md"
requires-python = ">=3.12,<4"
license = { text = "MIT" }
authors = [{ name = "Michael C. McMinn", email = "mmcminn@uniondynamic.com" }]
dependencies = [
    "aiohttp>=3.12.13,<4",
    "cryptography>=45.0.5,<46",
    "fastapi>=0.115.6,<0.116",
    "httpx>=0.28.1,<0.29",
    "kubernetes>=31.0.0,<32",
    "pydantic>=2.10.3,<3",
    "uvicorn>=0.32.1,<0.33",
]

[project.scripts]
borg = "borg.__main__:run"

[dependency-groups]
dev = [
    "mypy>=1.13.0,<2",
    "pytest>=8.3.4,<9",
    "pytest-asyncio>=1.0.0,<2",
    "ruff>=0.11.0,<0.12",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"

[tool.uv]
required-version = ">=0.11.7,<0.12"

[tool.mypy]
files = ["src"]
ignore_missing_imports = true
python_version = "3.12"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
