[project]
name = "borg-smoke-tests"
version = "0.1.0"
description = "Python smoke-test support for Go BORG."
readme = "README.md"
requires-python = ">=3.12,<4"
license = { text = "MIT" }
authors = [{ name = "Michael C. McMinn", email = "mmcminn@uniondynamic.com" }]
dependencies = [
    "httpx>=0.28.1,<0.29",
    "pyyaml>=6.0.2,<7",
    "pytest>=8.3.4,<9",
]

[tool.uv]
package = false
required-version = ">=0.11.7,<0.12"

[tool.pytest.ini_options]
testpaths = ["tests/k8s_smoke"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
